@@ -104,6 +104,7 @@ struct current_user {
 
 struct current_file {
 	char		name[NAME_MAX];
+	char		unlink[NAME_MAX];
 	unsigned int	speed;
 	off_t		size;
 	char		compression_method;
